# py-num-ana

./: README.md  pyproject.toml
chap2/: logistic_euler.ipynb
